// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialButtonIconWords <FacebookButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--medium k-Button--beryllium k-Button--fit-content"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="14"
    viewBox="0 0 8 15"
    width="7"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M4.785 14.196V7.72H6.96l.324-2.523h-2.5v-1.61c0-.732.204-1.23 1.252-1.23h1.336V.1C7.142.07 6.348 0 5.425 0 3.498 0 2.18 1.176 2.18 3.336v1.86H0v2.525h2.18v6.476h2.605z"
    />
  </svg>
  <span>
    Facebook
  </span>
</button>
`;

exports[`SocialButtonIconWords <FacebookButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--large k-Button--beryllium k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="14"
    viewBox="0 0 8 15"
    width="7"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M4.785 14.196V7.72H6.96l.324-2.523h-2.5v-1.61c0-.732.204-1.23 1.252-1.23h1.336V.1C7.142.07 6.348 0 5.425 0 3.498 0 2.18 1.176 2.18 3.336v1.86H0v2.525h2.18v6.476h2.605z"
    />
  </svg>
  <span>
    Facebook
  </span>
</button>
`;

exports[`SocialButtonIconWords <InstagramButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--medium k-Button--beryllium k-Button--fit-content"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="16"
    viewBox="0 0 70 70"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M17 0A17 17 0 0 0 0 17v36a17 17 0 0 0 17 17h36a17 17 0 0 0 17-17V17A17 17 0 0 0 53 0zm0 6h36a10.91 10.91 0 0 1 11 11v36a10.91 10.91 0 0 1-11 11H17A10.91 10.91 0 0 1 6 53V17A10.91 10.91 0 0 1 17 6zm38 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm-20 6a17 17 0 1 0 17 17 17 17 0 0 0-17-17zm0 6a11 11 0 1 1-11 11 11 11 0 0 1 11-11z"
    />
  </svg>
  <span>
    Instagram
  </span>
</button>
`;

exports[`SocialButtonIconWords <InstagramButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--large k-Button--beryllium k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="16"
    viewBox="0 0 70 70"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M17 0A17 17 0 0 0 0 17v36a17 17 0 0 0 17 17h36a17 17 0 0 0 17-17V17A17 17 0 0 0 53 0zm0 6h36a10.91 10.91 0 0 1 11 11v36a10.91 10.91 0 0 1-11 11H17A10.91 10.91 0 0 1 6 53V17A10.91 10.91 0 0 1 17 6zm38 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm-20 6a17 17 0 1 0 17 17 17 17 0 0 0-17-17zm0 6a11 11 0 1 1-11 11 11 11 0 0 1 11-11z"
    />
  </svg>
  <span>
    Instagram
  </span>
</button>
`;

exports[`SocialButtonIconWords <LinkedinButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--medium k-Button--beryllium k-Button--fit-content"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 14 14"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M1.622 0a1.62 1.62 0 1 1-.002 3.242A1.62 1.62 0 0 1 1.622 0zm-1.4 13.465H3.02V4.47H.222v8.995zM4.773 4.47h2.68V5.7h.038c.374-.707 1.286-1.452 2.646-1.452 2.83 0 3.353 1.862 3.353 4.284v4.933h-2.796V9.09c0-1.042-.018-2.384-1.452-2.384-1.455 0-1.677 1.137-1.677 2.31v4.45H4.773V4.47"
    />
  </svg>
  <span>
    Linkedin
  </span>
</button>
`;

exports[`SocialButtonIconWords <LinkedinButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--large k-Button--beryllium k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 14 14"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M1.622 0a1.62 1.62 0 1 1-.002 3.242A1.62 1.62 0 0 1 1.622 0zm-1.4 13.465H3.02V4.47H.222v8.995zM4.773 4.47h2.68V5.7h.038c.374-.707 1.286-1.452 2.646-1.452 2.83 0 3.353 1.862 3.353 4.284v4.933h-2.796V9.09c0-1.042-.018-2.384-1.452-2.384-1.455 0-1.677 1.137-1.677 2.31v4.45H4.773V4.47"
    />
  </svg>
  <span>
    Linkedin
  </span>
</button>
`;

exports[`SocialButtonIconWords <TwitterButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--medium k-Button--beryllium k-Button--fit-content"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 15 14"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M15.256 1.468a6.22 6.22 0 0 1-1.797.493c.645-.387 1.14-1 1.375-1.73a6.276 6.276 0 0 1-1.988.758A3.128 3.128 0 0 0 7.433 3.13c0 .245.027.484.08.713a8.88 8.88 0 0 1-6.45-3.27 3.13 3.13 0 0 0 .968 4.179A3.109 3.109 0 0 1 .614 4.36v.04c0 1.516 1.08 2.78 2.51 3.07a3.2 3.2 0 0 1-.824.11c-.203 0-.4-.02-.59-.058a3.13 3.13 0 0 0 2.924 2.174A6.273 6.273 0 0 1 0 10.992a8.86 8.86 0 0 0 4.798 1.407c5.757 0 8.906-4.77 8.906-8.907 0-.136-.003-.27-.01-.405a6.332 6.332 0 0 0 1.562-1.62"
    />
  </svg>
  <span>
    Twitter
  </span>
</button>
`;

exports[`SocialButtonIconWords <TwitterButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-900,#222);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c0:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-grey-900,#222);
  color: var(--color-grey-000,#fff);
}

.c0:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-200);
  background-color: var(--color-grey-200);
  color: var(--color-grey-600);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  className="c0 k-Button k-Button--large k-Button--beryllium k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": null,
      "--Button-bullet-color": null,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 15 14"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M15.256 1.468a6.22 6.22 0 0 1-1.797.493c.645-.387 1.14-1 1.375-1.73a6.276 6.276 0 0 1-1.988.758A3.128 3.128 0 0 0 7.433 3.13c0 .245.027.484.08.713a8.88 8.88 0 0 1-6.45-3.27 3.13 3.13 0 0 0 .968 4.179A3.109 3.109 0 0 1 .614 4.36v.04c0 1.516 1.08 2.78 2.51 3.07a3.2 3.2 0 0 1-.824.11c-.203 0-.4-.02-.59-.058a3.13 3.13 0 0 0 2.924 2.174A6.273 6.273 0 0 1 0 10.992a8.86 8.86 0 0 0 4.798 1.407c5.757 0 8.906-4.77 8.906-8.907 0-.136-.003-.27-.01-.405a6.332 6.332 0 0 0 1.562-1.62"
    />
  </svg>
  <span>
    Twitter
  </span>
</button>
`;
